--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "deploy": "gh-pages -d .next"
   },
   "dependencies": {
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "@types/node": "20.11.10",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "10.4.17",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
     "lottie-react": "^2.4.0",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "next": "14.1.0",
+    "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
-    "react-scroll": "^1.8.9",
+    "react-icons": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
-    "sweetalert2": "^11.7.20",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "sweetalert2": "^11.10.4",
+    "tailwindcss": "3.4.1",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@types/react-scroll": "^1.8.7",
-    "gh-pages": "^5.0.0"
+    "@types/react-icons": "^3.0.0",
+    "@types/react-scroll": "^1.8.10",
+    "gh-pages": "^6.1.1"
   }
 }
